# vjpyree-gpn20

./: Cargo.toml  README.md  gpn20.touchosc  programconfig.json  pyproject.toml  traktor_tester.py  visuals.py
assets/glsl/: frag.glsl  post.glsl  rd.glsl  screen.glsl  tunnel.glsl  vert.glsl
assets/glsl/rd/: frag.glsl
layermods/: fb_template.py  post.py  reaction_diffusion.py  screen.py  sequencer.py  tunnel.py
pyutil/: animation.py  osccontrols.py  transition.py
src/: main.rs
src/pyree_modules/: button.rs  misc.rs  mod.rs  randomval.rs  toggle.rs
