[tool.poetry]
name = "vjpyree-gpn20"
version = "0.1.0"
description = ""
authors = ["VJ Pyree <contact@pyree.art>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
PyreeEngine = { git = "https://github.com/DrLuke/PyreeEngine" }
python-osc = "1.8.0"
imageio = "^2.16.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
